# Declarative

./: README.md
lab2/: main.hs
lab3/: main.hs
lab4/: main.hs
lab5/: swish.pl
lab6/weather_client/: Cargo.toml
lab6/weather_client/src/: main.rs
lab6/weather_server/: Cargo.toml
lab6/weather_server/src/: main.rs
