[package]
name = "weather_client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rxrust = "0.15.0"

url = "2.4.1"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.20.1"
rand = "0.8.5"
futures-util = { version = "0.3.29" }
futures-channel = { version = "0.3.29" }

serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
bincode = "1.3.3"
